rust_analytics/build_error.txt
    Checking tokio v1.48.0
    Checking cubecl-quant v0.8.1
    Checking burn-common v0.19.1
   Compiling darling v0.20.11
    Checking actix-router v0.5.3
   Compiling rust_analytics v0.1.0 (C:\Users\user\medical\rust_analytics)
    Checking tracing-serde v0.2.0
    Checking thread_local v1.1.9
error[E0425]: cannot find function `configure` in crate `tonic_build`
 --> build.rs:2:18
  |
2 |     tonic_build::configure().compile(&["../protos/analytics.proto"], &["../protos"])?;
  |                  ^^^^^^^^^ not found in `tonic_build`

For more information about this error, try `rustc --explain E0425`.
    Checking burn-tensor v0.19.1
error: could not compile `rust_analytics` (build script) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
